# GNearby

./: .gitignore  CMakeLists.txt
AAAMyDLL/: AAAMyDLL.vcxproj  AAAMyDLL.vcxproj.filters  Adapter.cpp  Adapter.h  advertising_options_w.h  compatible_u8_string.h  connection_options_w.h  data_exchange.h  discovery_options_w.cc  endpointInfo.cpp  file_w.cc  file_w.h  listeners_w.cc  listeners_w.h  medium_selector_w.h  medium_w.h  payload_w.cc  payload_w.h  strategy_w.cc  strategy_w.h
a_gnearby_console_app/: a_gnearby_console_app.cpp  a_gnearby_console_app.vcxproj  a_gnearby_console_app.vcxproj.filters  nearby_manager.h
a_wasdk_app/: App.xaml  App.xaml.cpp  App.xaml.h  DevicesPage.idl  DevicesPage.xaml  DevicesPage.xaml.cpp  DevicesPage.xaml.h  MainWindow.idl  MainWindow.xaml  MainWindow.xaml.cpp  MainWindow.xaml.h  Package.appxmanifest  PhoneDevice.cpp  PhoneDevice.h  a_wasdk_app.vcxproj  a_wasdk_app.vcxproj.filters  app.manifest  globals.cpp  globals.h  pch.h  readme.txt
a_wasdk_dll/: Adapter.cpp  Adapter.h  Class.cpp  Class.h  Class.idl  a_wasdk_dll.vcxproj  a_wasdk_dll.vcxproj.filters  a_wasdk_dll_TemporaryKey.pfx  dll_config.h  readme.txt
a_win32_dll/: Adapter.cpp  a_win32_dll.vcxproj  a_win32_dll.vcxproj.filters  advertisement.cc  advertisement.h  advertising_options_w.cc  advertising_options_w.h  attachment.cc  attachment.h  attachment_info.cc  connection_options_w.cc  connection_options_w.h  discovery_options_w.cc  discovery_options_w.h  dll_config.h  dllmain.cpp  endpointInfo.cpp  endpointInfo.h  fast_init.cpp  fast_init.h  fast_initiation_advertiser.cc  fast_initiation_advertiser.h  file_attachment.cc  file_attachment.h  hardcoded.cpp  hardcoded.h  incoming_frames_reader.cc  incoming_frames_reader.h  incoming_share_target_info.cc  incoming_share_target_info.h  logging.h  mime.cc  nearby_api.cpp  nearby_api.h  nearby_connection_impl.cc  nearby_connection_impl.h  nearby_connections_manager.cc  nearby_connections_manager.h  nearby_connections_manager_factory.cc  nearby_connections_manager_factory.h  (+48 more)
cmake/: dependencies.cmake
connections/: CMakeLists.txt
connections/c/: file_w.h  params_w.h
connections/connectionsd/: CMakeLists.txt
connections/implementation/: CMakeLists.txt  p2p_cluster_pcp_handler.cc
connections/implementation/analytics/: CMakeLists.txt
connections/implementation/mediums/: CMakeLists.txt  ble_v2.cc
connections/implementation/mediums/ble_v2/: CMakeLists.txt
connections/implementation/proto/: CMakeLists.txt
connections/v3/: CMakeLists.txt
core_adapter/: core_adapter.vcxproj
gnearby_console_app/: gnearby_console_app.cpp  gnearby_console_app.vcxproj  gnearby_console_app.vcxproj.filters
internal/analytics/: CMakeLists.txt
internal/base/: CMakeLists.txt
internal/crypto/: CMakeLists.txt
internal/crypto_cros/: CMakeLists.txt
internal/data/: CMakeLists.txt
internal/flags/: CMakeLists.txt
internal/interop/: CMakeLists.txt
internal/network/: CMakeLists.txt
internal/platform/: CMakeLists.txt
internal/platform/implementation/linux/: CMakeLists.txt  atomic_boolean.h  atomic_boolean_test.cc  atomic_reference.h  atomic_reference_test.cc  atomic_uint32.h  avahi.cc  avahi.h  ble_gatt_server.cc  ble_gatt_server.h  ble_medium.h  ble_v2_medium.cc  ble_v2_medium.h  ble_v2_server_socket.h  bluetooth_adapter.cc  bluetooth_adapter.h  bluetooth_bluez_profile.cc  bluetooth_bluez_profile.h  bluetooth_classic_device.cc  bluetooth_classic_device.h  bluetooth_classic_medium.cc  bluetooth_classic_medium.h  bluetooth_classic_server_socket.cc  bluetooth_classic_server_socket.h  bluetooth_classic_socket.cc  bluetooth_classic_socket.h  bluetooth_devices.cc  bluetooth_devices.h  bluetooth_pairing.cc  bluetooth_pairing.h  bluez.cc  bluez.h  bluez_advertisement_monitor.cc  bluez_advertisement_monitor.h  bluez_advertisement_monitor_manager.h  bluez_gatt_characteristic.cc  bluez_gatt_characteristic.h  bluez_gatt_manager.h  bluez_gatt_service.cc  bluez_gatt_service.h  (+76 more)
internal/platform/implementation/shared/: CMakeLists.txt
internal/platform/implementation/windows/: CMakeLists.txt  ble_medium.cc  ble_v2.cc  bluetooth_adapter.cc  bluetooth_adapter.h  device_info.cc  log_message.cc  log_message.h  platform.cc  utils.cc  webrtc.cc  wifi_lan_medium.cc
internal/proto/: CMakeLists.txt
internal/proto/analytics/: CMakeLists.txt
internal/test/: CMakeLists.txt
internal/weave/: CMakeLists.txt
proto/: CMakeLists.txt
proto/errorcode/: CMakeLists.txt
proto/mediums/: CMakeLists.txt
sharing/: BUILD  CMakeLists.txt  advertisement.cc  advertisement.h  attachment.cc  attachment.h  attachment_info.cc  attachment_info.h  connection_lifecycle_listener.h  constants.h  endpoint_discovery_listener.h  file_attachment.cc  file_attachment.h  incoming_frames_reader.cc  incoming_frames_reader.h  incoming_frames_reader_test.cc  incoming_share_target_info.cc  incoming_share_target_info.h  nearby_connection.h  nearby_connection_impl.cc  nearby_connection_impl.h  nearby_connection_impl_test.cc  nearby_connections_manager.cc  nearby_connections_manager.h  nearby_connections_manager_factory.cc  nearby_connections_manager_factory.h  nearby_connections_manager_impl.cc  nearby_connections_manager_impl.h  nearby_connections_manager_impl_test.cc  nearby_connections_service.cc  nearby_connections_service.h  nearby_connections_service_impl.cc  nearby_connections_service_impl.h  nearby_connections_stream_buffer_manager.cc  nearby_connections_stream_buffer_manager.h  nearby_connections_stream_buffer_manager_test.cc  nearby_connections_types.h  nearby_connections_types_payload_test.cc  nearby_connections_types_test.cc  nearby_file_handler.cc  (+56 more)
sharing/analytics/: BUILD  analytics_device_settings.h  analytics_information.h  analytics_recorder.cc  analytics_recorder.h  (+1 more)
sharing/proto/: BUILD  CMakeLists.txt  certificate_rpc.proto  contact_rpc.proto  device_rpc.proto  encrypted_metadata.proto  enums.proto  field_mask.proto  rpc_resources.proto  settings_observer_data.proto  timestamp.proto  wire_format.proto
sharing/proto/analytics/: BUILD  CMakeLists.txt  nearby_sharing_log.proto
(+173 files in other folders)
